--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -4,11 +4,11 @@
       <ion-icon aria-hidden="true" name="home-outline"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" (click)="navigateTo('/tabs/tab2')">
+    <ion-tab-button tab="search" (click)="navigateTo('/search')">
       <ion-icon aria-hidden="true" name="search-outline"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" (click)="navigateTo('/tabs/tab3')">
+    <ion-tab-button tab="settings" (click)="navigateTo('/settings3')">
       <ion-icon aria-hidden="true" name="settings-outline"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
