--- a/src/app/shared/components/tab-layout/tab-layout.component.html
+++ b/src/app/shared/components/tab-layout/tab-layout.component.html
@@ -1,17 +1,33 @@
 <ion-header>
   <ion-toolbar>
-    <!-- <ion-icon class="ion-padding-start" size="large" name="chevron-back-outline" slot="start"></ion-icon> -->
+    <ion-icon *ngIf="backUrl"
+      class="back-button ion-padding-start"
+      size="large"
+      name="chevron-back-outline"
+      slot="start"
+      (click)="navigateBack()">
+    </ion-icon>
+    
     <ion-title slot="start">
       {{ tab.name }}
     </ion-title>
-    <ion-icon class="ion-padding-end" size="large" name="filter-outline" slot="end"></ion-icon>
+
+    <!-- Menu trigger -->
+    <ion-menu-toggle slot="end">
+      <ion-icon class="ion-padding-end" size="large" name="filter-outline"></ion-icon>
+    </ion-menu-toggle>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content id="main-content">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title class="ion-padding-start content-header">{{ tab.name }}</ion-title>
+      <ion-title class="ion-padding-start content-header">
+        <div class="d-flex flex-column">
+          <span class="content-header-title">{{ tab.name }}</span>
+          <span *ngIf="tab.name" class="content-header-subtitle">{{ tab.subtitle }}</span>
+        </div>
+      </ion-title>
     </ion-toolbar>
   </ion-header>
 
