--- a/src/app/shared/components/tab-layout/tab-layout.component.scss
+++ b/src/app/shared/components/tab-layout/tab-layout.component.scss
@@ -1,3 +1,29 @@
 :host {
-    height: 100%;
+  height: 100%;
+
+  ion-row.content-margin {
+    margin: 2px;
+    border-radius: 20px 20px 0 0;
+    padding: 10px 10px 50px 10px;
+    
+    ion-col {
+      border-radius: 20px;
+    }
+  }
+
+  .back-button {
+    font-size: 14px;
+  }
+}
+
+.content-header-subtitle {
+  font-size: 12px;
+  color: var(--ion-color-primary);
+}
+
+ion-title.content-header {
+  font-size: 1.5rem;
+  text-align: left;
+  padding-left: 25px;
+  padding-right: 25px;
 }
