--- a/src/app/features/search/search.component.html
+++ b/src/app/features/search/search.component.html
@@ -1,4 +1,5 @@
 <app-tab-layout [tab]="{name: 'Search'}">
-  <ng-container content>
-  </ng-container>
+  <div content>
+    <app-photo-upload></app-photo-upload>
+  </div>
 </app-tab-layout>
