--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -12,7 +12,7 @@
       <ion-icon aria-hidden="true" name="search-outline"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="settings" (click)="navigateTo('/settings3')">
+    <ion-tab-button tab="settings" (click)="navigateTo('/settings')">
       <ion-icon aria-hidden="true" name="settings-outline"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
