--- a/src/app/features/add-product/add-product.component.scss
+++ b/src/app/features/add-product/add-product.component.scss
@@ -11,3 +11,24 @@ ion-list {
         }
     }
 }
+
+.preview-textarea {
+    color: gray;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 100%;
+    text-wrap: nowrap;
+    margin-left: 20px;
+}
+
+.opened-calendar {
+    .header {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    ion-datetime {
+        background-color: var(--ion-color-light);
+        border-radius: 10px;
+    }
+}
