--- a/src/app/features/search/search.component.html
+++ b/src/app/features/search/search.component.html
@@ -1,5 +1,5 @@
 <app-tab-layout [tab]="{name: 'Search'}">
   <div content>
-    <app-photo-upload></app-photo-upload>
+    <!-- <app-photo-upload></app-photo-upload> -->
   </div>
 </app-tab-layout>
