--- a/src/global.scss
+++ b/src/global.scss
@@ -142,11 +142,24 @@ swiper-container {
   align-items: center;
 }
 
+.text-align-center {
+  text-align: center;
+}
+
+.overflow-scroll {
+  overflow: scroll;
+}
+
 ion-textarea {
   background-color: white;
   border: 1px solid #dedede;
   border-radius: 10px;
   height: 300px;
+
+  .textarea-wrapper-inner {
+    height: 100%;
+    padding: 10px 20px;
+  }
 }
 
 
@@ -157,4 +170,8 @@ ion-menu.full-width {
 .placeholder {
   color: var(--placeholder-color);
   opacity: 0.6;
+}
+
+.border-radius {
+  border-radius: 20px;
 }
