--- a/src/app/shared/components/chips-filter/chips-filter.component.scss
+++ b/src/app/shared/components/chips-filter/chips-filter.component.scss
@@ -18,6 +18,8 @@
   ion-button.chip-button {
     --padding-start: 10px;
     --padding-end: 10px;
+    font-size : 11px;
+    --border-width: 1px;
   }
 
   ion-button.chip-filter-button {
