--- a/src/app/shared/components/tab-layout/tab-layout.component.scss
+++ b/src/app/shared/components/tab-layout/tab-layout.component.scss
@@ -2,9 +2,9 @@
   height: 100%;
 
   ion-row.content-margin {
-    margin: 2px;
+    margin: 10px 5px;
     border-radius: 20px 20px 0 0;
-    padding: 10px 10px 70px 10px;
+    padding: 10px 10px 80px;
     
     ion-col {
       border-radius: 20px;
